--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,25 +1,128 @@
 ---
-title: "Reproducible Research: Peer Assessment 1"
-output: 
-  html_document:
-    keep_md: true
+title: "PA1_template"
+author: "may"
+date: "2017年12月31日"
+output: html_document
+editor_options: 
+  chunk_output_type: console
 ---
 
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+```
 
-## Loading and preprocessing the data
+## 1.Code for reading in the dataset and/or processing the data
+```{r load,cache=TRUE}
+d= read.csv(unz("activity.zip","activity.csv"),head=T,na.strings = 'NA')
+```
+
+## 2.Histogram of the total number of steps taken each day  
+```{r message=FALSE,warning=FALSE}
+
+if (require("dplyr")==FALSE){
+    install.packages("dplyr")
+    library(dplyr)
+}
+```
+
+```{r Histogram of the total number of steps taken each day}
+
+d_g=group_by(d,date)
+s=summarise(d_g,total_steps=sum(steps,na.rm = T))
+hist(s$total_steps,main = "Histogram of the total number of steps taken each day",
+     xlab = "total number of steps every day")
+```
+
+## 3.Mean and median number of steps taken each day
+```{r Mean and median number of steps taken each day}
+mean=mean(s$total_steps)
+median=median(s$total_steps)
+```
+mean is **`r mean`** and median is **`r median`**
+
+## 4.Time series plot of the average number of steps taken
+```{r Time series plot of the average number of steps taken}
+d_g=group_by(d,interval)
+avg_steps=summarise(d_g,avg=mean(steps,na.rm=T))
+plot(avg_steps$interval,avg_steps$avg,type="l")
+abline(v=avg_steps[which.max(avg_steps$avg),1])
+```
+
+## 5.The 5-minute interval that, on average, contains the maximum number of steps 
+```{r maximum number of steps}
+maximum=avg_steps[which.max(avg_steps$avg),1]
+```
+The 5-minute interval that, on average, contains the maximum number of steps 
+is **`r maximum`**
+
+## 6.Code to describe and show a strategy for imputing missing data
+```{r}
+sum(is.na(d$steps))
+d_impute=d
+
+# fill the NAs by the average steps of the same 5-minute
+for(i in 1:nrow(d_impute))
+{
+    if (is.na(d_impute[i,"steps"])) {
+        d_impute[i,"steps"]=
+            avg_steps[which(avg_steps$interval==d_impute[i,"interval"]),"avg"]
+    }
+}
+```
+
+## 7.Histogram of the total number of steps taken each day after missing values are imputed
+```{r histogram}
+d_impute_g=group_by(d_impute,date)
+s_impute=summarise(d_impute_g,total_steps=sum(steps,na.rm = T))
+hist(s_impute$total_steps,main = "Histogram of the total number of steps taken each day",
+     xlab = "total number of steps every day")
+mean_impute=mean(s_impute$total_steps)
+median_impute=median(s_impute$total_steps)
+```
+the mean and median total number of steps taken per day is **`r  format(mean_impute,digits=2)`** and **`r format(median_impute,digits=2)`**. the impact of imputing missing data on the estimates of the total daily number of steps is that the Frequency of 0-5000 steps become much less. 
 
 
+## 8.Panel plot comparing the average number of steps taken per 5-minute interval across weekdays and weekends
+```{r message=FALSE,warning=FALSE}
+# install 'chron' to call 'is.weekend'
+if (require("chron")==FALSE){
+    install.packages("chron")
+    library(chron)
+}
 
-## What is mean total number of steps taken per day?
-
-
-
-## What is the average daily activity pattern?
-
-
-
-## Imputing missing values
-
+```
 
 
-## Are there differences in activity patterns between weekdays and weekends?
+```{r}
+
+# create a variable "weekday"
+d_impute$date = as.Date(d_impute$date)
+w=function(x) {
+    if(is.weekend(x)){
+        "weekend"
+    } else
+    {
+        "weekday"
+    }
+}
+d_impute$weekday = sapply(d_impute$date,FUN = w)
+d_impute$weekday = as.factor(d_impute$weekday)
+
+# summrise
+d_impute_g = group_by(d_impute,weekday,interval)
+s=summarise(d_impute_g,numberofsteps=sum(steps))
+```
+
+```{r message=FALSE,warning=FALSE}
+# install 'chron' to call 'is.weekend'
+if (require("lattice")==FALSE){
+    install.packages("lattice")
+    library(lattice)
+}
+
+```
+
+plot
+```{r lattice xyplot}
+xyplot(numberofsteps ~ interval | weekday,data = s, layout = c(1,2),type="l")
+```
